# launchpad

./: .env.example  .gitignore  LAUNCHPAD.md  LICENSE  README.md  cavs_summer_league_2026.json  config.json  pyproject.toml  requirements.txt
assets/fonts/: README.md
deploy/: launchpad-config.service  launchpad.service
docs/: AISHA_REALTIME_PROPOSAL.md  CLEANUP.md  ESPN_ACCESS_HANDOFF.md  PROJECT_VISION.md
src/launchpad/: __init__.py  __main__.py  app.py  builder.py  factory.py  preview.py
src/launchpad/config/: __init__.py  config_store.py  features.py  settings.py
src/launchpad/config_server/: __main__.py  app.py
src/launchpad/config_server/static/: app.js  style.css
src/launchpad/config_server/templates/: index.html
src/launchpad/display/: __init__.py  base.py  eink_display.py  mock_display.py
src/launchpad/models/: __init__.py  calendar.py  dashboard.py  geometry.py  result.py  train.py  weather.py
src/launchpad/models/experimental/: __init__.py  baby.py  fantasy.py  nba.py  world_cup.py
src/launchpad/rendering/: __init__.py  base.py  fonts.py  frame.py  landscape.py  portrait.py  weather_icons.py
src/launchpad/services/: __init__.py  base.py
tests/: conftest.py
tests/fixtures/: open_meteo_london.json  tfl_custom_house_arrivals.json
tests/integration/: test_dashboard.py
tests/unit/: test_builder.py  test_dashboard.py  test_display.py  test_factory.py  test_mock_calendar_service.py  test_models.py  test_rendering.py  test_services.py  test_tfl_service.py  test_weather_icons.py  test_weather_service.py  test_world_cup_builder.py  test_world_cup_rendering.py  test_world_cup_service.py
(+19 files in other folders)
